[package]
name = "sslcommerz"
version = "0.1.1"
edition = "2021"
authors = ["tanvirsaklan"]
description = "A Rust library for using SSLCommerz payment gateway in back-end projects"
license = "MIT"
repository = "https://github.com/tanvirsaklan/sslcommerz"
homepage = "https://github.com/tanvirsaklan/sslcommerz"
readme = "README.md"
keywords = ["payment-gateway", "sslcommerz"]
categories = ["web-programming", "development-tools"]

[dependencies]
md5 = "0.8.0"
reqwest = { version = "0.13.2", features = ["json", "blocking", "rustls", "form", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
